# marioproject

./: CMakeLists.txt  Game.cpp  Game.h  Level.cpp  Level.h  Life.cpp  Life.h  Player.h  Score.cpp  Score.h  gamestate.h  main.cpp
OneDrive/Documents/Mario_/: .gitignore.txt  CMakeLists.txt  bonusblock.cpp  bonusblock.h  enemy.cpp  enemy.h  game.h  gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  inputhandler.cpp  inputhandler.h  life.cpp  life.h  main.cpp  platform.cpp  platform.h  player.cpp  player.h  resources.qrc  score.cpp  score.h  spike.cpp  spike.h
OneDrive/Documents/Mario_/.qtcreator/: CMakeLists.txt.user.6eb8900  CMakeLists.txt.user.8f88bd3
